@@ -1653,7 +1653,7 @@ static int _eval_nodes_topo(struct job_record *job_ptr, bitstr_t *bitmap,
 		}
 
 		if (job_ptr->req_switch > 0) {
-			if (time_waiting > job_ptr->wait4switch) {
+			if (time_waiting >= job_ptr->wait4switch) {
 				job_ptr->best_switch = true;
 				debug3("Job=%u Waited %ld sec for switches use=%d",
 					job_ptr->job_id, time_waiting,
